# trampoline

./: .gitignore  CNAME  README.md  index.html  no_license.txt  pyproject.toml  readme.md  setup.cfg  setup.py
.github/: auto-assign-issues.yml
.github/workflows/: activation.yml  devel.yml  game_ci.yml  main.yml  release.yml  template.yml
app/: main.py
demos/: demo_text.py  demo_trampoline.py  demo_window_resizing.py
doc/:  Trampoline Version 2015.doc  Compter les points .ods  GRILLE 01&Nr.xls  GRILLE 02&01r.xls  GRILLE 03&02r.xls  GRILLE 04&03r.xls  GRILLE 05&04r.xls  GRILLE 06&05r.xls  GRILLE 07&06r.xls  GRILLE 08&07r.xls  GRILLE 09&08r.xls  GRILLE 10&9r.xls  GRILLE 11&10r.xls  Trampoline Version jaune plus.ods  Trampoline.doc  Trampoline.txt  Une lettre.xls  testtonio.xls
src/trampoline/: cevent.py  colors.py  grid.py  letter.py  main_window.py  word_checker.py
src/trampoline/kivy/: colors.py  letter.py  main.py  paddle.py  trampoline.kv
src/trampoline/kivy_tutorials/: box_tuto.py  test_letter.py
src/trampoline/pygame/: cevent.py  dictionary_checker.py  grid.py  letter.py  main.py  main_window.py  trampoline.py  word_checker.py
trampoline/: MULTIPLAYER_SETUP.md  PROGRESSIVE_SCORING.md  QUICK_REFERENCE.md  SINGLE_STORE_APPROACH.md  trampoline.slnx
trampoline/Assets/Prefabs/: BasicToken.prefab  ButtonMode.prefab  ButtonRules.prefab  Dictionnary.prefab  GameSceneController.prefab  PlayerCount.prefab  Quit.prefab  SaveMe.prefab  Singletons.prefab
trampoline/Assets/Resources/: multi_rules.txt  solo_rules.txt
trampoline/Assets/Scenes/: introduction_scene.unity  loading_scene.unity  main_scene.unity  multi_game_scene.unity  solo_game_scene.unity  solo_game_scene_dynamic 1.unity  solo_game_scene_dynamic 2.unity  solo_game_scene_dynamic.unity
trampoline/Assets/Scripts/: BasicToken.cs  Board.cs  BoardMultiplayer.cs  Colors.cs  ContentFitterRefresh.cs  DragAndDrop.cs  EndTurnButton.cs  FrenchDictionnary.cs  GameCanvas.cs  GameController.cs  GameControllerMultiplayer.cs  (+23 more)
trampoline/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
trampoline_WebGL_v3.1.3/: index.html
trampoline_WebGL_v3.2.0/: index.html
trampoline_kivy/: .gitignore  pyproject.toml
trampoline_kivy/src/trampoline/kivy/: colors.py  main.py
trampoline_kivy/src/trampoline/kivy_tutorials/: demo_letter.py
trampoline_pygame/: readme.md
trampoline_unity/: .gitignore
(+175 files in other folders)
