[metadata]
name = trampoline
description = Un jeux pour faire rebondir les mots
long_description = file: readme.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/MaximilienNaveau/trampoline
author = Maximilien Naveau
author_email = maximilien.naveau@gmail.com,
license = Unlicensed, Copyright Maximilien Naveau
license_file = no_license.txt
classifiers =
    Development Status :: 1 - Unstable
    Environment :: GUI
    Environment :: Ubuntu / MacOsX / Windows / Android
    Intended Audience :: French speaking word game lovers.
    License :: OSI Approved :: Unlicensed
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: WIN32 :: Windows 10
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: VideoGames :: WordPlay
project_urls = 
    Documentation = ...
    Source = https://github.com/MaximilienNaveau/trampoline
    Tracker = https://github.com/MaximilienNaveau/trampoline/issues

[options]
zip_safe = False
package_dir=
    =src
packages = find:
platforms = any
include_package_data = True
install_requires =
    pygame>='2.1.2'
python_requires = >=3.6
setup_requires =
    setuptools_scm

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    trampoline = trampoline.pygame.main:start_ubuntu
    trampoline_full_screen = trampoline.pygame.main:start_ubuntu
    trampoline_window = trampoline.pygame.main:start_ubuntu

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s