[tool.poetry]
name = "trampoline"
version = "0.1.0"
description = "Un jeux pour faire rebondir les mots"
authors = ["MaximilienNaveau <maximilien.naveau@gmail.com>"]

[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "src/trampoline/version.py"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"

